--- a/scss/queries.scss
+++ b/scss/queries.scss
@@ -1,6 +1,6 @@
 /*--------------------------------------------------------------------------------MEDIA QUERIES-------------------------------------------------------------*/
 
-@media (max-width: 400px) {
+@media screen (max-width: 400px) {
 
     .header {
      height:80px;
@@ -113,7 +113,7 @@
  /*----------------------------------------------------------------------------------960----------------------------------------------------------------------------------*/
  
  
- @media  (min-width: 960px) { 
+ @media  screen   (min-width: 960px) { 
      .logo a p {    
          font-size: 45px;
         padding-top: 14px;
