--- a/scss/slide.scss
+++ b/scss/slide.scss
@@ -1,7 +1,7 @@
 .slider {
     width: 100%;
-    min-height: 100px;
-    margin: auto;
+    height: auto;
+    margin-top: 9%;
     overflow: hidden;
 }
 
@@ -38,33 +38,9 @@
     100% {margin-left: -300%;}
 }
 
-/*---------------- ULTIMAS NOTICIAS --------------------*/
+/*---queries---*/
 
-.ultimas_noticias {width:95%;
-height: 460px;
-background-color:rgb(8, 128, 128);;
-padding-top: 200px;}
+@media  (max-width: 768px) {
+    .slider { margin-top:14%;}
 
-.ultimas_noticias p {float:right;
-width: 50%;
-color: white;
-margin-top: -358px;
-font-size:16px;
-padding-right: 30px;
-line-height: 24px;}
-
-.cleaner {clear: both;}
-
-.contenedor-foto-1 {width: 100%;
-padding-left: 0px;
-padding-top: 10px;
 }
-
-.contenedor-foto-1 img {box-shadow: 0 0 1rem rgba(0, 0, 0, 0.425);}
-
-.subtitulo {font-size: 25px;
-
-line-height: 30px;
-border-bottom: white;
-border-bottom-style: solid;
-border-bottom-width: 0.5px;}
