--- a/scss/contacto.scss
+++ b/scss/contacto.scss
@@ -7,7 +7,7 @@
 
 #contacto {height: 450px;}
 
-h3{ font-family: 'Fira Sans Condensed', sans-serif; 
+.tituloscontacto{ font-family: 'Fira Sans Condensed', sans-serif; 
     color:white;;
    font-size: 20px;
 text-align: left; 
@@ -58,6 +58,8 @@ font-family: 'Fira Sans Condensed 900', sans-serif;
 text-align: center}
 
 .pais {margin-top: -20px;}
+
+
 
 
 /*----------------960-----------------*/
